--- a/res/sistema/style.css
+++ b/res/sistema/style.css
@@ -112,7 +112,10 @@ img, svg {
 .sidebar.close .nav-links li .iocn-link{
   display: block
 }
-.sidebar .nav-links li i{
+/*.sidebar .nav-links li a {
+  color: #fff;
+}*/
+.sidebar .nav-links li i {
   height: 50px;
   min-width: 78px;
   text-align: center;
@@ -132,6 +135,7 @@ img, svg {
   display: flex;
   align-items: center;
   text-decoration: none;
+  color: #fff;
 }
 .sidebar .nav-links li a .link_name{
   font-size: 18px;
