Dificuldades para listar dados do banco de dados

--- a/views/sistema/index.html
+++ b/views/sistema/index.html
@@ -16,7 +16,7 @@
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Cadastro</a></li>
           <li><a href="formulario-cadastro-orgao.html">Orgão</a></li>
-          <li><a href="formulario-cadastro-usuario.html">Usuarios</a></li>
+          <li><a href="/sistema/formulario-cadastro-usuario">Usuarios</a></li>
           <li><a href="formulario-cadastro-consultas.html">Consultas</a></li>
         </ul>
       </li>
