--- a/views/sistema/novo-cadastro-orgao.html
+++ b/views/sistema/novo-cadastro-orgao.html
@@ -1,7 +1,36 @@
-<?php if(!class_exists('Rain\Tpl')){exit;}?><div class="sidebar close">
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <!-- Boxiocns CDN Link -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/carlettoicon.png"  href="carlettoicon.png">
+    <link rel="stylesheet" href="lib/css/bootstrap.min.css">
+   </head>
+<body>
+  <header>
+    <div class="header-nocolor">
+      <div class="container">
+        
+          <ul>
+            <li class="inicio"><a href="https://www.grupocarletto.com.br/">Inicio</a></li>
+            <li class="sobre"><a href="https://www.grupocarletto.com.br/?page_id=327">Sobre</a></li>
+            <li class="sobre"><a href="https://www.grupocarletto.com.br/?page_id=455">Credenciadas</a></li>
+            <li class="sobre"><a href="https://www.grupocarletto.com.br/?page_id=450">Blog</a></li>
+            <li class="sobre"><a href="https://www.grupocarletto.com.br/">Contato</a></li>
+            <li class="sobre"><a href="https://www.grupocarletto.com.br/?page_id=339">Area do Cliente</a></li>
+          </ul>
+      </div>
+    </div>  
+  </header>
+
+  <div class="sidebar close">
     <div class="logo-details">
-      <img src="/res/sistema/img/icone-logo-menu.png">
-      <span class="logo_name"><img src="/res/sistema/img/1logo-login.png"></span>
+      <img src="img/icone-logo-menu.png">
+      <span class="logo_name"><img src="img/1logo-login.png"></span>
     </div>
     <ul class="nav-links">
       </li>
@@ -16,7 +45,7 @@
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Cadastro</a></li>
           <li><a href="formulario-cadastro-orgao.html">Orgão</a></li>
-          <li><a href="/sistema/formulario-cadastro-usuario">Usuarios</a></li>
+          <li><a href="formulario-cadastro-usuario.html">Usuarios</a></li>
           <li><a href="formulario-cadastro-consultas.html">Consultas</a></li>
         </ul>
       </li>
@@ -57,7 +86,7 @@
         <div class="profile_name">$Usuario</div>
         <div class="job">Carletto Sitemas</div>
       </div>
-      <a class="bx bx-log-out" style="color: #fff; height: 50px; min-width: 78px; text-align: center; line-height: 50px; font-size: 20px; cursor: pointer; transition: all 0.3s ease;" href="sistema/logout">Sair</a>
+      <i class='bx bx-log-out' ></i>
     </div>
   </li>
 </ul>
@@ -77,12 +106,31 @@
       </div>
 
       <!-- Inicio do formulario -->
-     
-
-
+      <div class="campo-cadastro">
+      <p id="titulo-cadastro-orgao">Cadastro do Orgão</p>
+      
+        <form action="/" method="post" class="formulario-cadastro">
+          <br><br>
+          <td id="th1">Orgão</td>
+          <input class="nome-orgao-input" type="text" name="nome-orgao">
+          <br><br>
+          <th id="th2">Data Vencimento</th>
+          <input class="data-vencimento-input" type="date" name="data-vencimento">
+          <br><br>
+          <th id="th3">Valor Contrato</th>
+          <input class="valor-contrato-input" type="number">
+          <br><br><br>
+          <input class="botao-gravar-formulario" type="submit"></input>
+          <input class="botao-voltar-formulario" type="button" value="Voltar" onclick="history.go(-1)"></input>
+        </form>
+    
+      </div>
       <!-- Fim do formulario -->
   </section>
   <!-- End Main -->
+  
+    
+  
   <script>
   let arrow = document.querySelectorAll(".arrow");
   for (var i = 0; i < arrow.length; i++) {
@@ -97,3 +145,8 @@
   sidebarBtn.addEventListener("click", ()=>{
     sidebar.classList.toggle("close");
   });
+  </script>
+  <script src="lib/js/bootstrap.min.js"></script>
+  <script src="lib/js/bootstrap.min.js"></script>
+</body>
+</html>
