--- a/views/sistema/orgao.html
+++ b/views/sistema/orgao.html
@@ -1,36 +1,7 @@
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <!-- Boxiocns CDN Link -->
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/carlettoicon.png"  href="carlettoicon.png">
-    <link rel="stylesheet" href="lib/css/bootstrap.min.css">
-   </head>
-<body>
-  <header>
-    <div class="header-nocolor">
-      <div class="container">
-        
-          <ul>
-            <li class="inicio"><a href="https://www.grupocarletto.com.br/">Inicio</a></li>
-            <li class="sobre"><a href="https://www.grupocarletto.com.br/?page_id=327">Sobre</a></li>
-            <li class="sobre"><a href="https://www.grupocarletto.com.br/?page_id=455">Credenciadas</a></li>
-            <li class="sobre"><a href="https://www.grupocarletto.com.br/?page_id=450">Blog</a></li>
-            <li class="sobre"><a href="https://www.grupocarletto.com.br/">Contato</a></li>
-            <li class="sobre"><a href="https://www.grupocarletto.com.br/?page_id=339">Area do Cliente</a></li>
-          </ul>
-      </div>
-    </div>  
-  </header>
-
   <div class="sidebar close">
     <div class="logo-details">
-      <img src="img/icone-logo-menu.png">
-      <span class="logo_name"><img src="img/1logo-login.png"></span>
+      <img src="/res/sistema/img/icone-logo-menu.png">
+      <span class="logo_name"><img src="/res/sistema/img/1logo-login.png"></span>
     </div>
     <ul class="nav-links">
       </li>
@@ -44,9 +15,9 @@
         </div>
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Cadastro</a></li>
-          <li><a href="formulario-cadastro-orgao.html">Orgão</a></li>
-          <li><a href="formulario-cadastro-usuario.html">Usuarios</a></li>
-          <li><a href="formulario-cadastro-consultas.html">Consultas</a></li>
+          <li><a href="#">Orgão</a></li>
+          <li><a href="/users">Usuarios</a></li>
+          <li><a href="#">Consultas</a></li>
         </ul>
       </li>
       <li>
@@ -59,8 +30,8 @@
         </div>
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Empenho</a></li>
-          <li><a href="tabela-saldos.html">Saldos</a></li>
-          <li><a href="tabela-extratos.html">Extrato</a></li>
+          <li><a href="#">Saldos</a></li>
+          <li><a href="#">Extrato</a></li>
         </ul>
       </li>
       <li>
@@ -73,9 +44,9 @@
         </div>
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Painel</a></li>
-          <li><a href="monitor-avencer.html">A vencer</a></li>
-          <li><a href="monitor-vencidos.html">Vencidos</a></li>
-          <li><a href="todos-vencimentos.html">Todos</a></li>
+          <li><a href="#">A vencer</a></li>
+          <li><a href="#">Vencidos</a></li>
+          <li><a href="#s">Todos</a></li>
         </ul>
       </li>
   <li>
@@ -86,7 +57,7 @@
         <div class="profile_name">$Usuario</div>
         <div class="job">Carletto Sitemas</div>
       </div>
-      <i class='bx bx-log-out' ></i>
+       <a class="bx bx-log-out" style="color: #fff; height: 50px; min-width: 78px; text-align: center; line-height: 50px; font-size: 20px; cursor: pointer; transition: all 0.3s ease;" href="logout">Sair</a>
     </div>
   </li>
 </ul>
@@ -145,8 +116,4 @@
   sidebarBtn.addEventListener("click", ()=>{
     sidebar.classList.toggle("close");
   });
-  </script>
-  <script src="lib/js/bootstrap.min.js"></script>
-  <script src="lib/js/bootstrap.min.js"></script>
-</body>
-</html>
+  
