configurado insert do cadastro de orgão no banco de dados

--- a/views/sistema/index.html
+++ b/views/sistema/index.html
@@ -1,3 +1,29 @@
+  <li>
+    <div class="profile-details">
+      <div class="profile-content">
+      </div>
+      <div class="name-job">
+        <div class="profile_name">$Usuario</div>
+        <div class="job">Carletto Sitemas</div>
+      </div>
+      <a class="bx bx-log-out" style="color: #fff; height: 50px; min-width: 78px; text-align: center; line-height: 50px; font-size: 20px; cursor: pointer; transition: all 0.3s ease;" href="sistema/logout">Sair</a>
+    </div>
+  </li>
+</ul>
+  </div>
+  <!--Start Main -->
+  <section class="home-section">
+    <div class="home-content">
+      <i class='bx bx-menu' ></i>
+      <span class="text">Sistema de Monitoramento <h1>  Contratos Carletto</h1></span>
+      <h3 id="ass"> _Por Martinho Ramos</h3>
+    </div>
+    <div class="dataehora">
+      <script language=javascript type="text/javascript">
+      now = new Date
+      document.write (now.getHours() + ":" + now.getUTCMinutes() + ", " + now.getDate() + "/" + now.getMonth() + "/" + now.getFullYear() )
+      </script>
+      </div>
       <!-- Inicio do formulario -->
      
 
