--- a/views/sistema/users.html
+++ b/views/sistema/users.html
@@ -38,6 +38,8 @@
             <tr>
               <th scope="col">Identificador</th>
               <th scope="col">Nome</th>
+              <th scope="col">Ações</th>
+              
             </tr>
           </thead>
           <tbody>
@@ -45,6 +47,8 @@
             <tr>
               <td>{$value.idusuario}</td>
               <td>{$value.des_usuario}</td>
+              <td><a href="#" style="font-size: 8px; margin-left: 2px;" class="btn btn-primary btn-xs">Editar</a><a href="#" style="font-size: 8px; margin-left: 2px;" class="btn btn-danger btn-xs">Delete</a></td>
+              
             </tr>
             {/loop}
           </tbody>
